--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "echo-firebase",
+  "name": "express-firebase-auth",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "tsc",
+    "start": "node dist/src/index.js",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "dev": "ts-node-dev --respawn --require tsconfig-paths/register src/index.ts",
     "login": "dotenv -e .env.loginscript -- ts-node scripts/login.ts"
   },
@@ -27,6 +27,7 @@
     "globals": "^15.12.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.15.0"
